--- a/contact.html
+++ b/contact.html
@@ -24,10 +24,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="/iCoder-Blog/">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/iCoders-Blog/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/iCoder-Blog/about.html">About</a>
+          <a class="nav-link" href="/iCoders-Blog/about.html">About</a>
         </li>
 
         <li class="nav-item dropdown">
@@ -45,7 +45,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="/iCoder-Blog/contact.html">Contact us</a>
+          <a class="nav-link" href="/iCoders-Blog/contact.html">Contact us</a>
         </li>
 
         <li class="nav-item dropdown"></li>
